--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -88,12 +88,8 @@ cdfm_other_actions = Other Actions
 cdfm_display_options=Display Options
 cdfm_forum_settings=Forum Settings
 cdfm_topic_settings=Topic Settings
-cdfm_mark_check_as_read=Mark Read
-cdfm_mark_check_as_delete=Delete
-cdfm_mark_check_as_delete=Delete Checked
+cdfm_mark_check_as_read=Mark Checked as Read
 cdfm_mark_check_as_unread=Mark Checked as Unread
-cdfm_mark_check_move_to_folder=Move
-cdfm_mark_check_move_to_folder=Move Checked
 cdfm_mark_all_as_read=Mark All as Read
 cdfm_reply=Reply
 cdfm_print=Print
@@ -197,7 +193,6 @@ cdfm_deny_msg_has_reply = The message you are attempting to deny has a reply.  Y
 cdfm_add_comment_invalid = You must enter a comment.
 cdfm_insufficient_privileges_add_comment=You do not have permission to add a comment to this message.
 cdfm_insufficient_privileges_delete_msg=You do not have permission to delete this message.
-cdfm_deleted_success=The message(s) you selected have been successfully moved to the Deleted folder.
 
 cdfm_att = Attachments
 cdfm_attsize = Size
@@ -333,12 +328,8 @@ pvt_date = Date
 pvt_authby= Authored By
 pvt_subject = Subject 
 pvt_reply = Reply to Message
-#SAKAI-10505
-pvt_forward = Forward Message
 pvt_att= Attachments
 pvt_repmsg= Reply
-#####SAK-10505 add forward
-pvt_forwardmsg = Forward 
 pvt_move = Move to folder
 pvt_delete = Delete
 pvt_cancel = Cancel
@@ -391,8 +382,6 @@ pvt_priority_normal = Normal
 pvt_priority_low = Low
 pvt_priority_high = High
 pvt_select_addtl_recipients = Select Additional Recipients
-#SAKAI-10505
-pvt_select_forward_recipients = Select Forward Recipients
 pvt_time_format= MM/dd/yy 'at' HH:mm:ss
 pvt_prev_msg =< Previous Message
 pvt_next_msg = Next Message >
@@ -404,17 +393,15 @@ pvt_revise = Edit
 pvt_lowercase_msgs = message(s)
 pvt_num_messages = Number of Messages
 pvt_rcvd_msgs = Received Messages
-pvt_move_msg_to = Move Message(s) To
-pvt_move_msg = Move Messages
+pvt_move_msg_to = Move Message To
+pvt_move_msg = Move Message
 pvt_move_msg_error = Please select a Destination Folder.
-pvt_move_current_folder = (current location)
+pvt_move_current_folder = (The message is currently in this folder.)
 pvt_rename_folder_button = Rename Folder
 pvt_rename_folder_label = Rename Messages Folder
 pvt_yes = Yes
 pvt_no = No
 pvt_reply_prefix = Re:
-#SAKAI-10505
-pvt_forward_prefix = FW:
 
 pvt_alert = Alert:
 pvt_no_match_found = No matching result found
@@ -433,8 +420,6 @@ pvt_missing_subject = You must enter a subject before you may send this message.
 pvt_confirm_msg_delete = Are you sure you want to delete this message? If yes, click Delete to delete the message.
 pvt_enter_search_text = Please enter text for search.
 pvt_no_message_mark_read=No message selected to mark as read. Please select a message.
-pvt_no_message_mark_delete=No message selected for deletion. Please select a message.
-pvt_no_message_mark_move=No message selected to move to another folder. Please select a message.
 
 pvtMsgListSummary=List of messages. Each row represents an item. Column 1: checkbox to select item. Column 2: indicates whether message has an attachment. Column 3: message subject that may be clicked to view this message. Column 4: message recipient or author. Column 5: date and time message was sent. Column 6: message priority label.
 
