ONC-108 - added link 'in front' that user must click in order to compile unread message counts.
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/oncourse_2-4-x@32983 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -448,7 +448,7 @@ syn_discussion_heading=Forums
 syn_no_messages=None
 syn_no_sites=There are currently no sites to display at this location.
 syn_no_mc=There are currently no messages at this location.
-
+syn_check_messages=Check for new messages
 syn_options=Options
 syn_change_submit=Update Options
 syn_cancel=Cancel
