ONC-108 - removed scroll bar, changed text when getting actual counts
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/oncourse_2-4-x@33013 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -464,7 +464,7 @@ syn_goto_messages=Go to messages
 syn_goto_forums=Go to forums
 
 syn_tool_link_begin=<a href="#" onclick="javascript:window.parent.location.href='
-loading_wait=Loading...
+loading_wait=Checking for new messages...
 longPageLoad=synMain
 wait_icon=images/wait_sakai.gif
 
