SAK-1128 SAK-11173 move alt text to message bundles
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/SAK-11228@34286 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -45,6 +45,9 @@ cdfm_toolbar_separator = |
 cdfm_moderator_comment_text = Comment By 
 cdfm_moderate = Moderate
 cdfm_mark_as_read=Mark as Read
+cdfm_topic_folder=Topic folder
+msgs.cdfm_topic_folder=Topic folder with unread messages
+
 
 stat_list = Statistics
 stat_name = Name
