--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -46,7 +46,7 @@ cdfm_moderator_comment_text = Comment By
 cdfm_moderate = Moderate
 cdfm_mark_as_read=Mark as Read
 cdfm_topic_folder=Topic folder
-msgs.cdfm_topic_folder=Topic folder with unread messages
+cdfm_topic_folder=Topic folder with unread messages
 
 
 stat_list = Statistics
