git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/SAK-10559@35143 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -21,11 +21,10 @@ cdfm_no_attachments=No Attachments Yet
 cdfm_remove=Remove
 cdfm_button_bar_add_attachment_redirect=Add Attachment
 cdfm_none=None
-cdfm_invalidMessageTitleString = Validation Error: Value is required.
 cdfm_button_bar_post_message=Post Message
 cdfm_button_bar_save_draft=Save Draft
 cdfm_button_bar_cancel=Cancel
-cdfm_button_bar_revise=Edit
+cdfm_button_bar_revise=Revise
 cdfm_button_bar_delete=Delete
 cdfm_button_bar_add_groups_users=Add Individuals/Groups
 cdfm_button_bar_mark_as_read= Mark as Read
@@ -34,7 +33,7 @@ cdfm_button_bar_reply_to_topic = Reply to Topic
 cdfm_button_bar_reply_to_thread = Reply to Thread
 cdfm_button_bar_delete_msg = Delete
 cdfm_button_bar_grade = Grade
-cdfm_button_bar_post_revised_msg = Post Edited Message
+cdfm_button_bar_post_revised_msg = Post Revised Message
 cdfm_button_bar_approve = Approve
 cdfm_button_bar_deny = Deny
 cdfm_button_bar_deny_and_comment = Deny & Comment
@@ -80,19 +79,18 @@ cdfm_default_template_organize_instruction=
 cdfm_checkall=Check All
 cdfm_subject=Subject
 cdfm_authoredby=Authored By
+cdfm_readby=Read By
+cdfm_users=Users
 cdfm_date=Date
 cdfm_thread=Thread
 cdfm_collapse_expand_all=Expand All/Collapse All
 cdfm_label=Label
 cdfm_other_actions = Other Actions
-cdfm_mark_as_read = Mark as Read
 cdfm_display_options=Display Options
 cdfm_forum_settings=Forum Settings
 cdfm_topic_settings=Topic Settings
 cdfm_mark_check_as_read=Mark Checked as Read
-cdfm_mark_check_as_delete=Delete Checked
 cdfm_mark_check_as_unread=Mark Checked as Unread
-cdfm_mark_check_move_to_folder=Move Checked
 cdfm_mark_all_as_read=Mark All as Read
 cdfm_reply=Reply
 cdfm_print=Print
@@ -137,10 +135,10 @@ cdfm_lock_topic=Lock Topic (Disable topic postings)
 cdfm_moderate_topic=Moderate Topic
 cdfm_delete_topic=You are about to delete this topic and all of the messages associated with the topic.  Are you sure you want to delete the following topic and its contents?
 cdfm_short_desc_too_long=Short description cannot be longer than 255 characters.
-cdfm_last_revise_msg=Last Edited By 
+cdfm_last_revise_msg=Last Revised By 
 cdfm_last_revise_msg_on= on 
-date_format=MMM d, yyyy h:mm a
-date_format_paren=\ (MMM d, yyyy h:mm a)\ 
+date_format=MMM d, yyyy K:mm a
+date_format_paren=\ (MMM d, yyyy K:mm a)\ 
 df_view=View
 cdfm_valid_forum_title_warn=Please enter a valid forum title
 cdfm_valid_topic_title_warn=Please enter a valid topic title
@@ -177,10 +175,9 @@ cdfm_drafts=Drafts
 cdfm_msg_pending_queue=Pending Messages
 cdfm_msg_pending_label=PENDING
 cdfm_msg_denied_label=DENIED
-cdfm_msg_deleted_label=This message has been deleted
 cdfm_approved_alert=Message has been approved.
 cdfm_denied_alert=Message has been denied.
-cdfm_deny_with_comments_msg=You cannot deny a message with comments from this view. If you would like to include comments when denying a message, click the subject of the message and deny the message. You will then have the opportunity to add comments.
+cdfm_deny_with_comments_msg=To deny a message with comments, click on the message subject to go to the individual message view.
 cdfm_msg_pending_queue_title=Messages Pending Approval
 cdfm_no_pending_msgs=There are no pending messages to display.
 cdfm_no_message_mark_approved=No message selected to approve or deny.  Please select a message.
@@ -190,13 +187,11 @@ cdfm_deny_msgs_success=Selected message(s) denied.
 cdfm_reply_deleted = The message you are attempting to reply to has been deleted. You may not reply to this message.
 cdfm_no_assign_for_grade = You must choose an assignment before you submit a grade.
 cdfm_no_points_for_grade = You must enter grade points before you submit a grade.
-cdfm_delete_msg = Are you sure you want to delete this message? If yes, click Delete to remove this message from the thread. 
+cdfm_delete_msg = Are you sure you want to delete this message and any replies? If yes, click Delete to permanently delete this message and its replies. 
 cdfm_del_msg_has_reply = The message you are attempting to delete has a reply. You may not delete this message.
 cdfm_deny_msg_has_reply = The message you are attempting to deny has a reply.  You may not deny this message.
 cdfm_add_comment_invalid = You must enter a comment.
 cdfm_insufficient_privileges_add_comment=You do not have permission to add a comment to this message.
-cdfm_insufficient_privileges_delete_msg=You do not have permission to delete this message.
-cdfm_deleted_success=The message(s) you selected have been successfully moved to the Deleted folder.
 
 cdfm_att = Attachments
 cdfm_attsize = Size
@@ -226,7 +221,7 @@ cdfm_openb = (
 cdfm_closeb = )
 cdfm_dash = -
 cdfm_forum_locked = This forum is locked
-cdfm_revise_forum_msg = Edit Forum Message
+cdfm_revise_forum_msg = Revise Forum Message
 cdfm_topic_moderated_flag=; Moderated
 cdfm_add_comment = Add Comment to Denied Posting
 cdfm_add_comment_label = Add Comment:
@@ -245,12 +240,13 @@ perm_move_postings=Move Postings
 perm_moderate_postings=Moderate Postings
 perm_change_settings=Change Settings
 perm_post_to_gradebook=Post to Gradebook
-perm_revise_postings=Edit Postings
+perm_revise_postings=Revise Postings
 perm_delete_postings=Delete Postings
+perm_view_readby=View Readby
 
 perm_read=Read
-perm_revise_any=Edit Any
-perm_revise_own=Edit Own
+perm_revise_any=Revise Any
+perm_revise_own=Revise Own
 perm_delete_any=Delete Any
 perm_delete_own=Delete Own 
 perm_mark_as_read=Mark as Read
@@ -393,7 +389,7 @@ pvt_msgs_label = Messages -
 pvt_create_folder = Create Folder
 pvt_folder_title = Folder Title
 pvt_add = Add
-pvt_revise = Edit
+pvt_revise = Revise
 pvt_lowercase_msgs = message(s)
 pvt_num_messages = Number of Messages
 pvt_rcvd_msgs = Received Messages
@@ -414,7 +410,7 @@ pvt_create_diff_folder_name = Please create a different folder name.
 pvt_folder_name_blank = Folder name cannot be blank.
 pvt_enter_new_folder_name = Please enter a value for Folder Title.
 pvt_delete_folder_confirm = The folder contains messages that will also be deleted! Are you sure you want to delete the following folder and its contents?
-pvt_no_delete_revise_folder = You cannot Edit or Delete this folder.
+pvt_no_delete_revise_folder = You cannot Revise or Delete this folder.
 pvt_provide_email_addr = Please provide a valid email address
 pvt_confirm_perm_msg_delete = Are you sure you want to permanently delete the following message(s)?
 pvt_select_msgs_to_delete = There are no messages selected for deletion. 
@@ -424,15 +420,13 @@ pvt_missing_subject = You must enter a subject before you may send this message.
 pvt_confirm_msg_delete = Are you sure you want to delete this message? If yes, click Delete to delete the message.
 pvt_enter_search_text = Please enter text for search.
 pvt_no_message_mark_read=No message selected to mark as read. Please select a message.
-pvt_no_message_mark_delete=No message selected for deletion. Please select a message.
-pvt_no_message_mark_move=No message selected to move to another folder. Please select a message.
 
 pvtMsgListSummary=List of messages. Each row represents an item. Column 1: checkbox to select item. Column 2: indicates whether message has an attachment. Column 3: message subject that may be clicked to view this message. Column 4: message recipient or author. Column 5: date and time message was sent. Column 6: message priority label.
 
 pvt_email_footer1=This forwarded message was sent via
-pvt_email_footer2=Messages from the 
+pvt_email_footer2=Message Center from the 
 pvt_email_footer3=site.
-pvt_email_footer4=To reply to this message click this link to access Messages for this site:
+pvt_email_footer4=To reply to this message click this link to access Message Center for this site:
 
 syn_mark_as_read=Mark all as read
 syn_site_heading=Site
