--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
@@ -21,7 +21,6 @@ cdfm_no_attachments=Sin anexos todavía
 cdfm_remove=Eliminar
 cdfm_button_bar_add_attachment_redirect=Añadir anexo
 cdfm_none=Ninguno
-cdfm_invalidMessageTitleString = Error de validación: se requiere un valor.
 cdfm_button_bar_post_message=Enviar mensaje
 cdfm_button_bar_save_draft=Guardar vista preliminar
 cdfm_button_bar_cancel=Cancelar
@@ -116,7 +115,6 @@ cdfm_discussion_forum_settings=Configurar foros de discusión
 cdfm_settings_instruction=Los elementos obligatorios están marcados con
 cdfm_lock_forum=Bloquear foro (Deshabilita envíos al foro)
 cdfm_moderate_forum=Moderar foro
-cdfm_moderate_forums=Moderar temas de los foros
 cdfm_button_bar_save_setting=Guardar configuración
 cdfm_button_bar_save_draft=Guardar vista preliminar
 cdfm_button_bar_save_setting_add_topic=Guardar configuración y añadir tema
@@ -178,7 +176,6 @@ cdfm_drafts=Preliminares
 cdfm_msg_pending_queue=Mensajes pendientes
 cdfm_msg_pending_label=PENDIENTE
 cdfm_msg_denied_label=DENEGADO
-cdfm_msg_deleted_label=BORRADO
 cdfm_approved_alert=Los mensajes han sido aprobados.
 cdfm_denied_alert=El mensaje ha sido denegado.
 cdfm_deny_with_comments_msg=Para denegar un mensaje con comentarios, haga clic en el asunto del mesaje para ir a la vista individual de dicho mensaje.
@@ -425,10 +422,10 @@ pvt_no_message_mark_read= No ha seleccionado ningún mensaje para marcarlo como l
 
 pvtMsgListSummary= Lista de correos interno. Cada columna representa un elemento. Columna 1: casilla de selección. Columna 2: indica si el mensaje tiene adjunto. Columna 3: asunto del mensaje con un enlace para ver dicho mensaje. Columna 4: destinatario del mensaje o autor. Columna 4: fecha y hora en que el mensaje fue enviado. Columna 6: prioridad del mensaje.
 
-pvt_email_footer1=Este mensaje fue reenviado via el correo interno del servidor "
-pvt_email_footer2=", desde el sitio
-pvt_email_footer3=.
-pvt_email_footer4=Para responder a este mensaje pulse en este vínculo y accederá a Mensajería Interna:
+pvt_email_footer1= Este correo se ha enviado a través de
+pvt_email_footer2= de Comunicaciones
+pvt_email_footer3=del sitio.
+pvt_email_footer4= Para contestar a este mensaje haga clic en el enlace y accederá a Comunicaciones de este sitio:
 
 syn_mark_as_read= Marcar como leído
 syn_site_heading=Sitio
@@ -460,10 +457,8 @@ syn_goto_mc= Ir a Comunicaciones
 syn_goto_messages= Ir a mensajes
 syn_goto_forums=Ir a foros
 
-syn_tool_link_begin=<a href="#" onclick="javascript:window.parent.location.href='
 loading_wait=Cargando...
 longPageLoad=synMain
-wait_icon=images/wait_sakai.gif
 
 print_friendly = Ver una versión imprimible de la página actual
 send_to_printer=Enviar a la impresora
