MsgCntr i18n revision - Contributed by Universidad Politécnica de Valencia, darolmar@upvnet.upv.es, rmengod@cc.upv.es
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/SAK-12791@44998 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -448,6 +448,7 @@ pvt_missing_subject = You must enter a subject before you may send this message.
 pvt_confirm_msg_delete = Are you sure you want to delete this message? If yes, click Delete to delete the message.
 pvt_enter_search_text = Please enter text for search.
 pvt_no_message_mark_read=No message selected to mark as read. Please select a message.
+
 pvt_no_message_mark_delete=No message selected for deletion. Please select a message.
 pvt_no_message_mark_move=No message selected to move to another folder. Please select a message.
 pvt_deleted_success=The message(s) you selected have been successfully moved to the Deleted folder.
@@ -517,3 +518,12 @@ print_friendly = View a printable version of the current page
 send_to_printer=Send To Printer
 close_window=Close Window
 print_url=javascript:window.print()
+
+
+#########UPV################
+all_participants_desc=All Participants
+participants_group_desc={0} Group
+participants_role_desc= All {0} 
+hide_other_actions = Hide
+insert_original_text= Insert Original Text
+insert_original_message_text= Insert Original Message Text
