--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
@@ -44,6 +44,7 @@ cdfm_add_users = Para añadir individuos o grupo a la lista de permisos, seleccio
 cdfm_toolbar_separator = |
 cdfm_moderator_comment_text = Comentado por
 cdfm_moderate = Moderado
+cdfm_mark_as_read=Marcar como leído
 
 stat_list = Estadísticas
 stat_name = Nombre
@@ -79,7 +80,6 @@ cdfm_default_template_organize= Organizar foros y temas
 cdfm_default_template_organize_instruction=
 cdfm_checkall=Marca todos
 cdfm_subject=Tema
-cdfm_grade_msg = Calificar mensaje privado
 cdfm_authoredby=Creado por
 cdfm_date=Fecha
 cdfm_thread=Hilo
@@ -90,7 +90,9 @@ cdfm_display_options=Muestra opciones
 cdfm_forum_settings=Configurar foro
 cdfm_topic_settings=Configurar tema
 cdfm_mark_check_as_read=Marcar los señalados como leídos
+cdfm_mark_check_as_delete=Borrar
 cdfm_mark_check_as_unread=Marcar los señalados como no leídos
+cdfm_mark_check_move_to_folder=Mover
 cdfm_mark_all_as_read=Marcar todos como leídos
 cdfm_reply=Contestar
 cdfm_print=Imprimir
@@ -147,9 +149,6 @@ cdfm_insufficient_privileges_delete_forum= Privilegios insuficientes para borrar
 cdfm_insufficient_privileages_to = Privilegios  insufucientes para
 cdfm_insufficient_privileges_change_forum=Privilegios insuficientes para cambiar la configuración del foro
 cdfm_insufficient_privileges_create_topic=Privilegios insuficientes para crear un nuevo tema
-cdfm_insufficient_privileges = Privilegios insuficientes para borrar este foro
-cdfm_insufficient_privileages_to = Privilegios insuficientes para cambiar la configuración del foro
-cdfm_insufficient_privileages_to = Privilegios insuficientes para crear un nuevo tema
 cdfm_insufficient_privileges_new_topic = Privilegios insuficientes para cambiar la configuración de un tema
 cdfm_user_not_allowed_create_forum=El usuario no puede crear un nuevo foro
 cdfm_invalid_selected_forum=Foro seleccionado no Válido
@@ -196,6 +195,7 @@ cdfm_del_msg_has_reply = El mensaje que está intentado borrar tiene una respuest
 cdfm_deny_msg_has_reply = El mensaje que está intentado borrar tiene una respuesta. No se puede borrar este mensaje.
 cdfm_add_comment_invalid = Debe introducir un comentario.
 cdfm_insufficient_privileges_add_comment= No tiene permiso para añadir un comentario a este mensaje.
+cdfm_insufficient_privileges_delete_msg=No tiene permiso para borrar este mensaje.
 
 cdfm_att = Adjuntos
 cdfm_attsize = Tamaño
@@ -203,6 +203,7 @@ cdfm_atttype = Tipo
 cdfm_replyto = Contestando a
 cdfm_from = De
 cdfm_subject = Tema
+cdfm_grade_msg = Calificar mensaje privado
 cdfm_grade_points = Calificación (Sólo puntos):
 cdfm_curr_score = Puntuación actual:
 cdfm_assignments = Tareas:
@@ -230,6 +231,10 @@ cdfm_add_comment = Añadir comentario a un envío denegado
 cdfm_add_comment_label = Añadir comentario:
 cdfm_insert_original_text_comment = Mensaje original:
 cdfm_reply_prefix=Re:
+
+cdfm_points_possible=({0} puntos posibles)
+cdfm_null_points= - 
+cdfm_no_gb_perm=No tiene permiso para ver o calificar la entrada de Calificaciones para este alumno.
 
 #Permissions 
 perm_level= Nivel de permisos: 
@@ -324,14 +329,18 @@ pvt_pntformat= Versión imprimible
 pvt_cmpmsg= Crear mensaje
 pvt_emptydelfol= Borrar los items seleccionados
 pvt_dispop= Mostrar opciones
-pvt_pvtmsg= Corre interno
+pvt_pvtmsg= Correo interno
 pvt_label = Etiqueta
 pvt_date = Fecha 
 pvt_authby= Creado por
 pvt_subject = Tema 
 pvt_reply = Responder al correo interno
+pvt_forward = Mensaje para reenvíar
+pvt_forwarded_msg_heading = Mensaje reenviado
 pvt_att= Anexos
 pvt_repmsg= Responder
+pvt_repmsg_ALL= Responder a todos
+pvt_forwardmsg = Reenviar
 pvt_move = Mover a la carpeta
 pvt_delete = Borrar
 pvt_cancel = Cancelar
@@ -345,9 +354,9 @@ pvt_autofor1= Auto-Reenviar correos internos:
 pvt_emailfor= Dirección de correo de reenvío:
 pvt_saveset= Guarda configuración
 pvt_detmsgreply= Detalle del correo interno
-pvt_send= Envíar
+pvt_send= Enviar
 pvt_send_as_private= Como mensaje
-pvt_send_as_email= a las direcciones de correo de los remitentes
+pvt_send_as_email= A las direcciones de correo de los destinatarios
 pvt_savedraft= Guarda vista preliminar
 pvt_compose1= Crear 
 pvt_pvtcompose= Crear un correo interno
@@ -369,7 +378,7 @@ pvt_lowercase_msg = mensajes
 pvt_unread = sin leer
 pvt_prev_folder =<  Carpeta anterior
 pvt_next_folder = Carpeta siguiente >
-pvt_view_all_msgs = Todos los mensaje
+pvt_view_all_msgs = Todos los mensajes
 pvt_view_conversation = Por conversación
 pvt_search_text = Texto de la búsqueda:
 pvt_clear_search = Borrar búsqueda
@@ -384,6 +393,8 @@ pvt_priority_normal = Normal
 pvt_priority_low = Baja
 pvt_priority_high = Alta
 pvt_select_addtl_recipients = Seleccionar destinatarios adicionales
+#SAKAI-10505
+pvt_select_forward_recipients = Seleccionar los destinatarios del reenvío
 pvt_time_format= MM/dd/yy 'at' HH:mm:ss
 pvt_prev_msg =< Mensaje anterior
 pvt_next_msg = Mensaje siguiente >
@@ -404,6 +415,8 @@ pvt_rename_folder_label = Renombar carpeta de correo interno
 pvt_yes = Sí
 pvt_no = No
 pvt_reply_prefix = Re:
+#SAKAI-10505
+pvt_forward_prefix = RV:
 
 pvt_alert = Alerta:
 pvt_no_match_found = No se ha encontrado ningún resultado
@@ -423,12 +436,25 @@ pvt_confirm_msg_delete = ¿Está seguro que desea borrar este mensaje? En caso afi
 pvt_enter_search_text = Por favor, introduzca el texto de búsqueda.
 pvt_no_message_mark_read= No ha seleccionado ningún mensaje para marcarlo como leído. Por favor, seleccione un mensaje.
 
+pvt_no_message_mark_delete=No ha seleccionado ningún mensaje que borrar. Por favor, seleccione un mensaje.
+pvt_no_message_mark_move=No ha seleccionado ningún mensaje para cambiarlo de carpeta. Por favor, seleccione un mensaje.
+pvt_deleted_success= Los mensajes que ha seleccionado se ha movido a la carpeta "Borrados".
+pvt_perm_deleted_success= Los mensajes que ha seleccionado se han borrado con éxito.
+
+#PVT MSG FORWARDING INSERTED TEXT
+pvt_msg_fwd_heading = <span style="font-weight:bold;font-style:italic;">Mensaje reenviado</span>
+pvt_msg_fwd_authby = <span style="font-weight:bold;">Creado por </span> {0} ( {1} )
+pvt_msg_fwd_to = <span style="font-weight:bold;">Para </span> {0}
+pvt_msg_fwd_subject = <span style="font-weight:bold;">Asunto </span> {0}
+pvt_msg_fwd_label = <span style="font-weight:bold;">Etiqueta </span> {0}
+pvt_msg_fwd_attachments = <span style="font-weight:bold;">Adjuntos</span>
+
 pvtMsgListSummary= Lista de correos interno. Cada columna representa un elemento. Columna 1: casilla de selección. Columna 2: indica si el mensaje tiene adjunto. Columna 3: asunto del mensaje con un enlace para ver dicho mensaje. Columna 4: destinatario del mensaje o autor. Columna 4: fecha y hora en que el mensaje fue enviado. Columna 6: prioridad del mensaje.
 
-pvt_email_footer1=Este mensaje fue reenviado via el correo interno del servidor "
-pvt_email_footer2=", desde el sitio
-pvt_email_footer3=.
-pvt_email_footer4=Para responder a este mensaje pulse en este vínculo y accederá a Mensajería Interna:
+pvt_email_footer1= Este correo se ha enviado a través de
+pvt_email_footer2= de Comunicaciones
+pvt_email_footer3=del sitio.
+pvt_email_footer4= Para contestar a este mensaje haga clic en el enlace y accederá a Comunicaciones de este sitio:
 
 syn_mark_as_read= Marcar como leído
 syn_site_heading=Sitio
@@ -469,3 +495,12 @@ print_friendly = Ver una versión imprimible de la página actual
 send_to_printer=Enviar a la impresora
 close_window=Cerrar ventana
 print_url=javascript:window.print()
+
+
+###########UPV##############
+all_participants_desc=Todos los componentes
+participants_group_desc=Grupo {0}
+participants_role_desc=Todos los {0}
+hide_other_actions = Ocultar
+insert_original_text= Incluir texto original
+insert_original_message_text= Incluir el texto del mensaje original	
