--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -517,3 +517,6 @@ print_friendly = View a printable version of the current page
 send_to_printer=Send To Printer
 close_window=Close Window
 print_url=javascript:window.print()
+
+##ONC - to prevent replies to corrupt msgs
+pvtMsgCorrupt=We have detected a possible problem with this message that prevents your reply from being sent.
