SAK-13638 - Add code for display feed.
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/SAK-13638@47053 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -521,3 +521,6 @@ print_friendly = View a printable version of the current page
 send_to_printer=Send To Printer
 close_window=Close Window
 print_url=javascript:window.print()
+
+#For message feed
+pvt_msg_feed_msg_send= {0} sent you a message: <strong> {1} </strong>
