SAK-13638 http://bugs.sakaiproject.org/jira/browse/SAK-13638 Add Support for Event Writing to the Feed tool Forums tool integration
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/SAK-13638@47059 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -524,3 +524,5 @@ print_url=javascript:window.print()
 
 #For message feed
 pvt_msg_feed_msg_send= {0} sent you a message: <strong> {1} </strong>
+feed_forums_msg_posted={0} has posted a message "{1}" under the topic "{2}"
+feed_forums_msg_posted_moderated={0} has posted a message "{1}" requiring approval under the topic "{2}"
