SAK-12791 Branch to fix i18n issues in messagecenter. --fix i18n issue for Messages tool.
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/SAK-12791-2@47323 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -483,6 +483,10 @@ pvt_email_footer2=Messages from the
 pvt_email_footer3=site.
 pvt_email_footer4=To reply to this message click this link to access Messages for this site:
 
+pvt_msg_role= Role
+pvt_msg_group= Group
+pvt_all_participants=All Participants
+
 syn_mark_as_read=Mark all as read
 syn_site_heading=Site
 syn_private_heading=Messages
@@ -522,3 +526,12 @@ print_friendly = View a printable version of the current page
 send_to_printer=Send To Printer
 close_window=Close Window
 print_url=javascript:window.print()
+
+#Forums permission Level:
+permission_owner = Owner 11
+permission_author = Author 11
+permission_nonediting_author = Nonediting Author 1
+permission_contributor = Contributor 11
+permission_reviewer = Reviewer 11
+permission_none = None 11
+permission_custom = Custom 11
