http://bugs.sakaiproject.org/jira/browse/SAK-13736
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/SAK-13736@47427 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -16,10 +16,12 @@ cdfm_required=Required items marked with
 cdfm_title=Title
 cdfm_empty_title_error=Title cannot be empty.
 cdfm_message=Message
+cdfm_message_insert=Insert original text
 cdfm_attachments=Attachment(s):
-cdfm_no_attachments=No Attachments Yet
+cdfm_no_attachments=No attachments have been made
 cdfm_remove=Remove
-cdfm_button_bar_add_attachment_redirect=Add Attachment
+cdfm_button_bar_add_attachment_redirect=Add attachments
+cdfm_button_bar_add_attachment_more_redirect=Add more attachments
 cdfm_none=None
 cdfm_invalidMessageTitleString = Validation Error: Value is required.
 cdfm_button_bar_post_message=Post Message
@@ -64,6 +66,7 @@ stat_forum_read = Forum Read
 stat_forum_authored = Forum Authored
 
 cdfm_labels=Labels
+cdfm_newflag=New!
 cdfm_yes=Yes
 cdfm_no=No
 cdfm_draft=DRAFT
@@ -85,7 +88,7 @@ cdfm_date=Date
 cdfm_thread=Thread
 cdfm_collapse_expand_all=Expand All/Collapse All
 cdfm_label=Label
-cdfm_other_actions = Other Actions
+cdfm_other_actions = Show/Hide Actions
 cdfm_display_options=Display Options
 cdfm_forum_settings=Forum Settings
 cdfm_topic_settings=Topic Settings
@@ -103,6 +106,9 @@ cdfm_next_thread=Next Thread >
 cdfm_previous_thread=< Previous Thread
 cdfm_read_full_description=Read Full Description
 cdfm_hide_full_description=Hide Full Description
+cdfm_read_full_description_andatts=(and attachments)
+cdfm_no_topics=There are no topics posted in this forum. 
+cdfm_no_messages=There are no messages posted. 
 cdfm_access=Access
 cdfm_contributors=Contributor(s)
 cdfm_read_only_access=Read-only Access
@@ -112,19 +118,22 @@ cdfm_message_permissions=Message Permissions
 cdfm_info_required_sign=*
 cdfm_forum_title=Forum Title
 cdfm_forum_posting=Forum Posting
-cdfm_shortDescription=Short Description
+cdfm_shortDescription=Short Description (255 characters max)
 cdfm_fullDescription=Description
 cdfm_discussion_forum_settings=Forum Settings
 cdfm_settings_instruction=Required items marked with 
 cdfm_lock_forum=Lock Forum (Disable forum postings)
 cdfm_moderate_forum=Moderate Topics in Forum
 cdfm_moderate_forums=Moderate Topics in Forums
-cdfm_button_bar_save_setting=Save Settings
+cdfm_button_bar_save_setting=Save
 cdfm_button_bar_save_draft=Save Draft
 cdfm_button_bar_save_setting_add_topic=Save Settings & Add Topic
+cdfm_delete_forum_title=Delete Forum
 cdfm_delete_forum=You are about to delete all the topics and messages associated with the forum.  Are you sure you want to delete the following forum and its contents?
 cdfm_discussion_topic_settings=Topic Settings
 cdfm_topic_title=Topic Title
+cdfm_moderated=moderated
+cdfm_notmoderated=not moderated
 cdfm_topic_post_before_reading=Post Before Reading
 cdfm_topic_posting=Topic Posting
 cdfm_topic_annonymous_responses=Anonymous Responses
@@ -135,6 +144,7 @@ cdfm_topic_post_before_reading_desc=Users must post a response before reading ot
 cdfm_topic_response_visibility=Response Visibility
 cdfm_lock_topic=Lock Topic (Disable topic postings)
 cdfm_moderate_topic=Moderate Topic
+cdfm_delete_topic_title=Delete Topic
 cdfm_delete_topic=You are about to delete this topic and all of the messages associated with the topic.  Are you sure you want to delete the following topic and its contents?
 cdfm_short_desc_too_long=Short description cannot be longer than 255 characters.
 cdfm_last_revise_msg=Last Edited By 
@@ -177,8 +187,8 @@ cdfm_grade_decimal_warn=Please input number with 2 or fewer digits after decimal
 cdfm_alert=Alert: 
 cdfm_drafts=Drafts
 cdfm_msg_pending_queue=Pending Messages
-cdfm_msg_pending_label=PENDING
-cdfm_msg_denied_label=DENIED
+cdfm_msg_pending_label=Pending
+cdfm_msg_denied_label=Denied
 cdfm_msg_deleted_label=This message has been deleted
 cdfm_approved_alert=Message has been approved.
 cdfm_denied_alert=Message has been denied.
@@ -198,14 +208,12 @@ cdfm_deny_msg_has_reply = The message you are attempting to deny has a reply.  Y
 cdfm_add_comment_invalid = You must enter a comment.
 cdfm_insufficient_privileges_add_comment=You do not have permission to add a comment to this message.
 cdfm_insufficient_privileges_delete_msg=You do not have permission to delete this message.
-cdfm_insufficient_privileges_view_topic=The Forum Topic you attempted to view is currently not available. Please contact your instructor if you have any questions.
-cdfm_insufficient_privileges_view_forum=The Forum you attempted to view is currently not available. Please contact your instructor if you have any questions.
-
 
 cdfm_att = Attachments
 cdfm_attsize = Size
 cdfm_atttype = Type
 cdfm_replyto = Replying To
+cdfm_replytoshowhide = Show/hide replying-to mesage
 cdfm_from = From
 cdfm_subject = Subject
 cdfm_grade_msg = Grade Forum Message
@@ -230,6 +238,7 @@ cdfm_openb = (
 cdfm_closeb = )
 cdfm_dash = -
 cdfm_forum_locked = This forum is locked
+cdfm_forum_noforums=No forums have been created.
 cdfm_revise_forum_msg = Edit Forum Message
 cdfm_topic_moderated_flag=; Moderated
 cdfm_add_comment = Add Comment to Denied Posting
@@ -242,9 +251,10 @@ cdfm_null_points= -
 cdfm_no_gb_perm=You do not have permission to view or grade the selected gradebook item for this student.
 
 #Permissions 
-perm_level= Permission Level : 
+perm_level= gets this permission level: 
 perm_role=Role
-perm_role_label=Role :
+perm_role_label=This site role:
+perm_custom=which you can customize below:
 perm_new_forum=New Forum
 perm_new_topic=New Topic
 perm_new_response=New Response
@@ -485,8 +495,8 @@ pvt_email_footer4=To reply to this message click this link to access Messages fo
 
 syn_mark_as_read=Mark all as read
 syn_site_heading=Site
-syn_private_heading=Messages
-syn_discussion_heading=Forums
+syn_private_heading=New Messages
+syn_discussion_heading=New in Forums
 syn_no_messages=None
 syn_no_sites=There are currently no sites to display at this location.
 syn_no_mc=There are currently no messages at this location.
