--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -104,9 +104,11 @@ cdfm_next_topic=Next Topic >
 cdfm_previous_topic=< Previous Topic
 cdfm_next_thread=Next Thread >
 cdfm_previous_thread=< Previous Thread
-cdfm_read_full_description=Read Full Description
-cdfm_hide_full_description=Hide Full Description
-cdfm_read_full_description_andatts=(and attachments)
+cdfm_full_description=Full Description 
+cdfm_view=View 
+cdfm_hide=Hide 
+cdfm_and= And 
+cdfm_attach=Attachments
 cdfm_no_topics=There are no topics posted in this forum. 
 cdfm_no_messages=There are no messages posted. 
 cdfm_access=Access
