--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -111,6 +111,7 @@ cdfm_and= And
 cdfm_attach=Attachments
 cdfm_no_topics=There are no topics posted in this forum. 
 cdfm_no_messages=There are no messages posted. 
+cdfm_no_unread_messages= There are no unread messages.
 cdfm_access=Access
 cdfm_contributors=Contributor(s)
 cdfm_read_only_access=Read-only Access
