--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -195,7 +195,7 @@ cdfm_msg_denied_label=Denied
 cdfm_msg_deleted_label=This message has been deleted
 cdfm_approved_alert=Message has been approved.
 cdfm_denied_alert=Message has been denied.
-cdfm_deny_with_comments_msg=You cannot deny a message with comments from this view. If you would like to include comments when denying a message, click the subject of the message and deny the message. You will then have the opportunity to add comments.
+cdfm_deny_with_comments_msg=You cannot deny a message with comments from this view. If you would like to include comments when denying a message, click the subject of the message and deny the message. You will then have the opportunity to add comments. If you are expecting attachments and need to read before approving or denying the message, open the message to read before doing so.
 cdfm_msg_pending_queue_title=Messages Pending Approval
 cdfm_no_pending_msgs=There are no pending messages to display.
 cdfm_no_message_mark_approved=No message selected to approve or deny.  Please select a message.
