CTools-JIRA 589  - some missing values in lang bundle
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/SAK-13736@48388 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -105,10 +105,12 @@ cdfm_previous_topic=< Previous Topic
 cdfm_next_thread=Next Thread >
 cdfm_previous_thread=< Previous Thread
 cdfm_full_description=Full Description 
+cdfm_read_full_description=Read Full Description
+cdfm_hide_full_description=Hide Full Description
 cdfm_view=View 
 cdfm_hide=Hide 
-cdfm_and= And 
-cdfm_attach=Attachments
+cdfm_and= and 
+cdfm_attach=attachments
 cdfm_no_topics=There are no topics posted in this forum. 
 cdfm_no_messages=There are no messages posted. 
 cdfm_no_unread_messages= There are no unread messages.
@@ -174,7 +176,7 @@ cdfm_topic_with_id=Topic with id '
 cdfm_message_with_id=Message with id '
 cdfm_not_found_quote='not found
 cdfm_parent_forum_not_found=Parent Forum not found
-cdfm_not_found_redirect_page=Could not find a redirect page : Read / Hide full descriptions
+cdfm_not_found_redirect_page=Could not find a redirect page
 cdfm_message_reference_not_found=Message reference not found
 cdfm_topic_reference_not_found=Topic reference not found for the message
 cdfm_unable_retrieve_topic=Unable to retrieve topic
