--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_pt_PT.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_pt_PT.properties
@@ -13,7 +13,7 @@ cdfm_att=Anexos
 cdfm_attachments=Anexo(s)\:
 cdfm_attsize=Tamanho
 cdfm_atttype=Tipo
-cdfm_authoredby=Autoria de
+cdfm_authoredby=Autor
 cdfm_button_bar_add_attachment_redirect=Adicionar anexo
 cdfm_button_bar_add_comment=Adicionar coment\u00E1rio
 cdfm_button_bar_add_groups_users=Adicionar indiv\u00EDduos/grupos
@@ -40,7 +40,7 @@ cdfm_checkall=Marcar todas
 cdfm_closeb=)
 cdfm_collapse_expand_all=Expandir/Condensar tudo
 cdfm_comments=Coment\u00E1rios\:
-cdfm_container_title=Comp\u00F4r mensagem
+cdfm_container_title=Criar mensagem
 cdfm_container_title_thread=Criar nova discuss\u00E3o
 cdfm_contributors=Contribuidor(es)
 cdfm_control_permissions=Permiss\u00F5es de controlo
@@ -98,8 +98,8 @@ cdfm_invalidMessageTitleString=Erro de valida\u00E7\u00E3o\: \u00E9 necess\u00E1
 cdfm_invalid_selected_forum=O f\u00F3rum selecionado \u00E9 inv\u00E1lido
 cdfm_label=Prioridade
 cdfm_labels=Prioridades
-cdfm_last_revise_msg=\u00DAltima modifica\u00E7\u00E3o por
-cdfm_last_revise_msg_on=em
+cdfm_last_revise_msg=\u00DAltima modifica\u00E7\u00E3o por 
+cdfm_last_revise_msg_on=em 
 cdfm_lock_forum=Bloquear f\u00F3rum (desactivar cria\u00E7\u00E3o de mensagens)
 cdfm_lock_topic=Bloquear t\u00F3pico (desactivar cria\u00E7\u00E3o de mensagens)
 cdfm_lost_association=Associa\u00E7\u00E3o com o t\u00F3pico actual perdida
@@ -127,8 +127,8 @@ cdfm_msg_denied_label=RECUSADO
 cdfm_msg_pending_label=PENDENTE
 cdfm_msg_pending_queue=Mensagens pendentes
 cdfm_msg_pending_queue_title=Mensagens pendentes para aprova\u00E7\u00E3o
-cdfm_new_forum=Novo f\u00F3rum
-cdfm_new_topic=Novo t\u00F3pico
+cdfm_new_forum=Criar f\u00F3rum
+cdfm_new_topic=Criar t\u00F3pico
 cdfm_next_msg=Pr\u00F3xima mensagem >
 cdfm_next_thread=Pr\u00F3xima discuss\u00E3o >
 cdfm_next_topic=Pr\u00F3ximo t\u00F3pico >
@@ -184,7 +184,7 @@ cdfm_template_setting=Op\u00e7\u00f5es por defeito
 cdfm_thread=Discuss\u00E3o
 cdfm_thread_view=Mostrar apenas assuntos
 cdfm_title=T\u00EDtulo
-cdfm_tool_bar_message=Comp\u00F4r mensagem de f\u00F3rum
+cdfm_tool_bar_message=Criar mensagem de f\u00F3rum
 cdfm_toolbar_separator=|
 cdfm_topic_allow_anonymous_postings=Permitir mensagens de an\u00F3nimos (identidade conhecida para utilizadores de administra\u00E7\u00E3o)
 cdfm_topic_annonymous_responses=Respostas an\u00F3nimas
@@ -242,9 +242,9 @@ perm_level=N\u00EDvel de permiss\u00E3o\:
 perm_mark_as_read=Marcar como n\u00E3o lida
 perm_moderate_postings=Moderar mensagens
 perm_move_postings=Mover mensagens
-perm_new_forum=Novo f\u00F3rum
-perm_new_response=Nova resposta
-perm_new_topic=Novo t\u00F3pico
+perm_new_forum=Criar f\u00F3rum
+perm_new_response=Responder
+perm_new_topic=Criar t\u00F3pico
 perm_none=Nenhuma
 perm_own=Pr\u00F3prio
 perm_post_to_gradebook=Criar no Gradebook
@@ -267,7 +267,7 @@ pvt_att=Anexos
 pvt_attrem=Eliminar
 pvt_attsize=Tamanho
 pvt_atttype=Tipo
-pvt_authby=Autoria de
+pvt_authby=Autor
 pvt_autofor=Reencaminhamento autom\u00E1tico
 pvt_autofor1=Reencaminhamento autom\u00E1tico\:
 pvt_beg_date=Data de in\u00EDcio
@@ -277,16 +277,16 @@ pvt_body=Corpo da mensagem
 pvt_cancel=Cancelar
 pvt_clear_search=Limpar pesquisa
 pvt_closeb=)
-pvt_cmpmsg=Comp\u00F4r mensagem
+pvt_cmpmsg=Criar mensagem
 pvt_colon=\:
-pvt_compose=Comp\u00F4r mensagem
-pvt_compose1=Comp\u00F4r
+pvt_compose=Criar mensagem
+pvt_compose1=Criar
 pvt_confirm_msg_delete=Tem a certeza que pretende eliminar esta mensagem?
 pvt_confirm_perm_msg_delete=Tem a certeza que pretende eliminar definitivamente esta(s) mensagem(s)?
 pvt_create_diff_folder_name=Por favor crie uma pasta com um nome diferente.
 pvt_create_folder=Criar pasta
 pvt_date=Data
-pvt_date_range=Intervalo de tempo\:
+pvt_date_range=Datas\:
 pvt_delcon=Confirmar elimina\u00E7\u00E3o...
 pvt_delete=Eliminar
 pvt_delete_folder_confirm=Esta pasta cont\u00E9m mensagens que ser\u00E3o tamb\u00E9m eliminadas. Tem a certeza que pretende continuar?
@@ -296,9 +296,9 @@ pvt_delmsgs=Eliminar mensagem(s)
 pvt_detmsgreply=Detalhe da mensagem
 pvt_dispop=Op\u00E7\u00F5es de visualiza\u00E7\u00E3o
 pvt_drafts=Rascunho
-pvt_email_footer1=Esta mensagem reencaminhada foi enviada de
-pvt_email_footer2=Mensagens de 
-pvt_email_footer3=\u00E1rea.
+pvt_email_footer1=Mensagem privada recebida de
+pvt_email_footer2=da \u00E1rea 
+pvt_email_footer3=.
 pvt_email_footer4=Para responder a esta mensagem clique em 
 pvt_emailfor=Endere\u00E7o de email para reencaminhar\:
 pvt_emptydelfol=Eliminar items selecionados
@@ -333,7 +333,7 @@ pvt_msg_]=]
 pvt_msg_at=em
 pvt_msg_comma=,
 pvt_msg_fwd_attachments=<span style\="font-weight\:bold;">Anexos</span>
-pvt_msg_fwd_authby=<span style\="font-weight\:bold;">Autoria de </span> {0} ( {1} )
+pvt_msg_fwd_authby=<span style\="font-weight\:bold;">Autor </span> {0} ( {1} )
 pvt_msg_fwd_heading=<span style\="font-weight\:bold;font-style\:italic;">Mensagem reencaminhada</span>
 pvt_msg_fwd_label=<span style\="font-weight\:bold;">Prioridade </span> {0}
 pvt_msg_fwd_subject=<span style\="font-weight\:bold;">Assunto </span> {0}
@@ -342,7 +342,7 @@ pvt_msg_on=Em
 pvt_msg_replyall_heading=<span style\="font-weight\:bold;font-style\:italic;">      </span>
 pvt_msg_wrote=escreveu\:
 pvt_msgs_label=Mensagens - 
-pvt_newfolder=Nova pasta
+pvt_newfolder=Criar pasta
 pvt_next_folder=Pr\u00F3xima pasta >
 pvt_next_msg=Pr\u00F3xima mensagem >
 pvt_no=N\u00E3o
@@ -364,7 +364,7 @@ pvt_priority_high=Alta
 pvt_priority_low=Baixa
 pvt_priority_normal=Normal
 pvt_provide_email_addr=Introduza um endere\u00E7o de email v\u00E1lido
-pvt_pvtcompose=Comp\u00F4r uma mensagem
+pvt_pvtcompose=Criar uma mensagem
 pvt_pvtmsg=Mensagem
 pvt_rcvd_msgs=Mensagens recebidas
 pvt_received=Recebidas
@@ -380,7 +380,7 @@ pvt_revise=Editar
 pvt_savedraft=Guardar rascunho
 pvt_saveset=Guardar op\u00e7\u00f5es
 pvt_search=Pesquisar
-pvt_search_in=PESQUISAR IN
+pvt_search_in=PESQUISAR EM\: 
 pvt_search_text=Pesquisar texto\:
 pvt_select_addtl_recipients=Seleccione destinat\u00E1rios adicionais
 pvt_select_forward_recipients=Seleccione destinat\u00E1rios para reencaminhar
@@ -393,7 +393,7 @@ pvt_send_as_email=Para o(s) endere\u00E7o(s) de email do(s) destinat\u00E1rio(s)
 pvt_send_as_private=Como mensagem
 pvt_send_cc=Enviar Cc
 pvt_sendemailout=Permitir enviar c\u00F3pias para os endere\u00E7os de email dos destinat\u00E1rios\:
-pvt_sent=Enviada
+pvt_sent=Enviadas
 pvt_settings=Op\u00e7\u00f5es
 pvt_star=*
 pvt_statistics=Estat\u00EDsticas
@@ -426,7 +426,7 @@ sort_subject_desc=Ordenar por assunto descendente
 sort_to=Ordenar por destinat\u00E1rios
 sort_to_asc=Ordenar por destinat\u00E1rios ascendente
 sort_to_desc=Ordenar por destinat\u00E1rios descendente
-stat_authored=Autoria
+stat_authored=Autor
 stat_forum_authored=Criadas do f\u00F3rum
 stat_forum_date=Data
 stat_forum_read=Lidas do f\u00F3rum
@@ -469,3 +469,4 @@ syn_site_not_vis=Notifica\u00E7\u00F5es de \u00E1rea n\u00E3o vis\u00EDveis
 syn_site_vis=Notifica\u00E7\u00F5es de \u00E1rea vis\u00EDveis
 syn_tool_link_begin=<a href\="\#" onclick\="javascript\:window.parent.location.href\='
 wait_icon=images/wait_sakai.gif
+pvt_enter_shorter_folder_name=O t\u00edtulo da pasta deve ter menos de 100 caracteres.
