--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -528,3 +528,27 @@ longPageLoad=synMain
 wait_icon=images/wait_sakai.gif
 
 print_url=javascript:window.print()
+
+# Email functions
+cdfm_button_bar_email=Email
+
+# Watch forums options
+watch=Watch
+watch_forums_options=Watch Forums Options
+notify_for_all_postings=Notify me by email whenever a new message is posted
+notify_for_postings_to_my_thread=Notify me by email when a thread that I have contributed to receives a new message
+notify_none=No notification
+
+# email notification text
+email.body.location=Location: 
+email.body.author=Author: 
+email.body.msgtitle=Message Title: 
+email.body.msgposted=Message Posted On:
+email.fromName=CourseWork
+email.fromAddress=no-reply@coursework.stanford.edu
+email.subject=New Message Posted to Online Discussion
+email.body.redirect1=Access Forum for 
+
+
+
+
