SAK-14803 - Checking in extended Forums statistics
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/SAK-14803@55486 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -63,6 +63,10 @@ stat_sort_percent_read = Sort By Percent Read
 stat_forum_read = Forum Read
 stat_forum_authored = Forum Authored
 
+extended_stat_list = Extended Statistics
+extended_stat_forum = View by Forum
+extended_stat_user = View by User
+
 cdfm_labels=Labels
 cdfm_yes=Yes
 cdfm_no=No
