http://bugs.sakaiproject.org/jira/browse/SAK-15535
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/SAK-13736@56901 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -17,6 +17,10 @@ cdfm_title=Title
 cdfm_empty_title_error=Title cannot be empty.
 cdfm_message=Message
 cdfm_message_insert=Insert original text
+cdfm_message_count=Count words
+cdfm_message_count_words=Words:
+cdfm_message_count_chars=Characters:
+cdfm_message_count_update: Update word count
 cdfm_attachments=Attachment(s):
 cdfm_no_attachments=No attachments have been made
 cdfm_remove=Remove
@@ -67,8 +71,16 @@ stat_forum_authored = Forum Authored
 
 cdfm_labels=Labels
 cdfm_newflag=New!
+cdfm_gotonewtitle=Go to next new message
+cdfm_lastnewtitle=Last new message
+cdfm_gotopendtitle=Go to next pending message
+cdfm_lastpendtitle=Last pending message
+
+cdfm_gotofirstnewtitle=Go to first new message
+cdfm_gotofirstpendingtitle=Go to first pending message
 cdfm_newflagparent=New messages
-cdfm_newflagresponses=New responses
+cdfm_newflagresponses=New messages
+
 cdfm_yes=Yes
 cdfm_no=No
 cdfm_draft=DRAFT
@@ -108,8 +120,11 @@ cdfm_previous_topic=< Previous Topic
 cdfm_next_thread=Next Thread >
 cdfm_previous_thread=< Previous Thread
 cdfm_full_description=Full Description 
-cdfm_read_full_description=Read Full Description
+cdfm_read_full_description=View Full Description
 cdfm_hide_full_description=Hide Full Description
+cdfm_read_full_rep_tomessage=View message you are replying to
+cdfm_hide_full_rep_tomessage=Hide message you are replying to
+
 cdfm_view=View 
 cdfm_hide=Hide 
 cdfm_and= and 
@@ -127,6 +142,7 @@ cdfm_info_required_sign=*
 cdfm_forum_title=Forum Title
 cdfm_forum_posting=Forum Posting
 cdfm_shortDescription=Short Description (255 characters max)
+cdfm_shortDescriptionCharsRem=%1 chars remain
 cdfm_fullDescription=Description
 cdfm_discussion_forum_settings=Forum Settings
 cdfm_settings_instruction=Required items marked with 
