--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -45,7 +45,7 @@ cdfm_toolbar_separator = |
 cdfm_moderator_comment_text = Comment By 
 cdfm_moderate = Moderate
 cdfm_mark_as_read=Mark as Read
-
+cdfm_readby=Read by: 
 stat_list = Statistics
 stat_name = Name
 stat_authored = Authored
