SAK-17049 Merged 65917, 65918 Resolved word count issues related to: messageforums-hbm/src/java/org/sakaiproject/component/app/messageforums/dao/hibernate/MessageImpl.java messageforums-app/src/java/org/sakaiproject/tool/messageforums/DiscussionForumTool.java
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/SAK-17049@66905 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -112,11 +112,16 @@ cdfm_next_topic=Next Topic >
 cdfm_previous_topic=< Previous Topic
 cdfm_next_thread=Next Thread >
 cdfm_previous_thread=< Previous Thread
+cdfm_full_description=Full Description 
 cdfm_read_full_description=Read Full Description
 cdfm_hide_full_description=Hide Full Description
-cdfm_read_full_description_andatts=(and attachments)
+cdfm_view=View 
+cdfm_hide=Hide 
+cdfm_and= and 
+cdfm_attach=attachments
 cdfm_no_topics=There are no topics posted in this forum. 
 cdfm_no_messages=There are no messages posted. 
+cdfm_no_unread_messages= There are no unread messages.
 cdfm_access=Access
 cdfm_contributors=Contributor(s)
 cdfm_read_only_access=Read-only Access
@@ -180,7 +185,7 @@ cdfm_topic_with_id=Topic with id '
 cdfm_message_with_id=Message with id '
 cdfm_not_found_quote='not found
 cdfm_parent_forum_not_found=Parent Forum not found
-cdfm_not_found_redirect_page=Could not find a redirect page : Read / Hide full descriptions
+cdfm_not_found_redirect_page=Could not find a redirect page
 cdfm_message_reference_not_found=Message reference not found
 cdfm_topic_reference_not_found=Topic reference not found for the message
 cdfm_unable_retrieve_topic=Unable to retrieve topic
@@ -201,7 +206,7 @@ cdfm_msg_denied_label=Denied
 cdfm_msg_deleted_label=This message has been deleted
 cdfm_approved_alert=Message has been approved.
 cdfm_denied_alert=Message has been denied.
-cdfm_deny_with_comments_msg=You cannot deny a message with comments from this view. If you would like to include comments when denying a message, click the subject of the message and deny the message. You will then have the opportunity to add comments.
+cdfm_deny_with_comments_msg=You cannot deny a message with comments from this view. If you would like to include comments when denying a message, click the subject of the message and deny the message. You will then have the opportunity to add comments. If you are expecting attachments and need to read before approving or denying the message, open the message to read before doing so.
 cdfm_msg_pending_queue_title=Messages Pending Approval
 cdfm_no_pending_msgs=There are no pending messages to display.
 cdfm_no_message_mark_approved=No message selected to approve or deny.  Please select a message.
@@ -251,6 +256,7 @@ cdfm_forum_locked = This forum is locked
 cdfm_forum_noforums=No forums have been created.
 cdfm_revise_forum_msg = Edit Forum Message
 cdfm_topic_moderated_flag=; Moderated
+cdfm_forum_moderated_flag= ( Moderated ) 
 cdfm_add_comment = Add Comment to Denied Posting
 cdfm_add_comment_label = Add Comment:
 cdfm_insert_original_text_comment = Original Message:
