SAK-17049: Merged revisions 65956, 65960, 65961, 65962, 66110 from SAK-16837
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/SAK-17049@66906 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -75,6 +75,8 @@ stat_sort_by_date=Sort by Date
 
 cdfm_labels=Labels
 cdfm_newflag=New!
+cdfm_newflagparent=New messages
+cdfm_newflagresponses=New responses
 cdfm_yes=Yes
 cdfm_no=No
 cdfm_draft=DRAFT
@@ -108,6 +110,7 @@ cdfm_mark_all_as_read=Mark All as Read
 cdfm_reply=Reply
 cdfm_print=Print
 cdfm_printer_friendly=Printer Friendly Format
+cdfm_up_level_title=Go up one level
 cdfm_next_topic=Next Topic >
 cdfm_previous_topic=< Previous Topic
 cdfm_next_thread=Next Thread >
@@ -223,12 +226,15 @@ cdfm_deny_msg_has_reply = The message you are attempting to deny has a reply.  Y
 cdfm_add_comment_invalid = You must enter a comment.
 cdfm_insufficient_privileges_add_comment=You do not have permission to add a comment to this message.
 cdfm_insufficient_privileges_delete_msg=You do not have permission to delete this message.
+cdfm_insufficient_privileges_view_topic=The Forum Topic you attempted to view is currently not available. Please contact your instructor if you have any questions.
+cdfm_insufficient_privileges_view_forum=The Forum you attempted to view is currently not available. Please contact your instructor if you have any questions.
+
 
 cdfm_att = Attachments
 cdfm_attsize = Size
 cdfm_atttype = Type
 cdfm_replyto = Replying To
-cdfm_replytoshowhide = Show/hide replying-to mesage
+cdfm_replytoshowhide = Show/hide replying-to message
 cdfm_from = From
 cdfm_subject = Subject
 cdfm_grade_msg = Grade Forum Message
@@ -244,6 +250,7 @@ cdfm_prev_msg = < Previous Message
 cdfm_next_msg = Next Message >
 cdfm_reply_tool_bar_message= Reply to Forum Message
 cdfm_reply_thread_tool_bar_message = Reply to Forum Thread
+cdfm_reply_message_pref = Replying to:
 cdfm_reply_title=Reply Title
 cdfm_reply_to_topic = Reply to Forum Topic
 cdfm_lowercase_msg = message
