MSGCNTR-124 Stack trace in from MessageForumSynapticBean
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@71640 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -536,6 +536,7 @@ pvt_email_footer2=Messages from the
 pvt_email_footer3=site.
 pvt_email_footer4=To reply to this message click this link to access Messages for this site:
 
+syn_anon=No unread message counts as you aren't logged in.
 syn_mark_as_read=Mark all as read
 syn_site_heading=Site
 syn_private_heading=New Messages
