--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -632,3 +632,7 @@ synoptic_no_activity=No recent activity has occurred in your sites.
 # JSF Override
 javax.faces.validator.LengthValidator.MAXIMUM=Validation Error: Field has more characters than allowable maximum ({0} characters)
 javax.faces.validator.LengthValidator.MINIMUM=Validation Error: Field does not have minimum number of allowable characters
+
+all_participants_desc=All Participants
+participants_group_desc=Group
+participants_role_desc=Role
